--- a/app/ts/uploadImage.component.html
+++ b/app/ts/uploadImage.component.html
@@ -1,15 +1,26 @@
-<form action="/pp" method="post" enctype="multipart/form-data">
-    <!--{% csrf_token %}-->
-    <!--<p>-->
-    <!--<input id="id_image" type="file" class="" name="image">-->
-    <!--</p>-->
-    <p>
-        <label class="btn btn-default">
-            Browse
-            <input id="id_image" name="image" type="file" style="display: none">
-        </label>
-    </p>
-    <input type="submit" value="Submit"/>
+<div class="banner btn">
+    <label id="dragBox" (drop)="drop($event)" (dragover)="allowDrop($event)" class="btn">
+        <input id="id_image" name="image" type="file" style="display: none">
 
-</form>
+        <img class="img" src="woods.png" alt=""/>
+        <h1 class="header">{{ mainHeading }}</h1>
+        <form class="content" action="/pp" method="post" enctype="multipart/form-data">
+            <!--{% csrf_token %}-->
+            <!--<p>-->
+            <!--<input id="id_image" type="file" class="" name="image">-->
+            <!--</p>-->
+
+            <!--<p>-->
+                <!--<label class="btn btn-default">-->
+                    <!--Browse-->
+                <!--</label>-->
+            <!--</p>-->
+
+            <button type="button" class="btn btn-info btn-circle btn-lg" value="Submit">Submit</button>
+
+            <!--<button type="submit" class="btn btn-info btn-circle btn-lg" value="Submit">Submit</button>-->
+            <!--<input type="submit" value="Submit"/>-->
+        </form>
+    </label>
+</div>
 
