--- a/app.css
+++ b/app.css
@@ -1,19 +1,17 @@
 .banner {
+    border: 2px dashed;
     alignment: center;
-    /*background-color: red;*/
-    /*padding-bottom: 50%;*/
-    padding-top: 5%;
-    padding-left: 5%;
-    padding-right: 5%;
+    background-color: gainsboro;
+    Height: 50%;
+    padding: 10px;
     position: relative;
+    margin-top: 5%;
 }
 
 .banner .img {
-    max-height: 500px;
-    border: 2px dashed;
-    max-width: 100%;
-    width: 100%;
-    opacity: 0.7;
+    min-height: 200px;
+    max-height: 400px;
+    min-width: 500px;
 }
 
 .banner .content {
@@ -30,7 +28,6 @@
     top: 40%;
     left: 35%;
     position: absolute;
-    /*bottom: 70%;*/
 }
 
 .btn-circle.btn-lg {
